# AlphaEngine

./: .gitignore  CMakeLists.txt  README.md
res/: bindings.txt  dialogue.txt
src/: AssetManager.h  Debug.h  DialogueManager.h  Filepath.h  Game.h  GameObject.h  GameScene.h  InputManager.h  MainMenu.h  MainMenuScene.h  Physics.h  PhysicsBody.h  SceneManager.h  Ui.h  application.cpp  application.h  game_scene.h  main.cpp  main_menu_scene.h  physics_body.h  player.h  scene.h  scene_manager.h  skybox.h  wrappers.h
src/shaders/: skybox.fs  skybox.vs
